// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposals/Status Closed smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle cursor-default"
>
  Closed
</div>
`;

exports[`Proposals/Status Draft smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle cursor-default"
>
  Draft
</div>
`;

exports[`Proposals/Status Loading smoke-test 1`] = `
<div class="skeleton inline-block h-8 w-24 rounded-md align-middle">
</div>
`;

exports[`Proposals/Status Merged smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle cursor-default"
>
  Merged
</div>
`;

exports[`Proposals/Status Open Edit Mode smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle"
>
  Open
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 24 24"
       class="h-5 w-5 flex-none fill-success-content"
  >
    <path fill="currentColor"
          d="M11.646 15.146L5.854 9.354a.5.5 0 0 1 .353-.854h11.586a.5.5 0 0 1 .353.854l-5.793 5.792a.5.5 0 0 1-.707 0"
    >
    </path>
  </svg>
</div>
`;

exports[`Proposals/Status Open smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle cursor-default"
>
  Open
</div>
`;
